infrastructure/production/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium
  namespace: cilium-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: tls-issuer-production
    io.cilium/lb-ipam-ips: "10.101.2.6"
spec:
  # Reference: https://cert-manager.io/docs/configuration/acme/http01/
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: cilium-gateway-tls-production
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: cilium-gateway-system
spec:
  # Reference: https://gateway-api.sigs.k8s.io/guides/user-guides/http-redirect-rewrite/
  parentRefs:
  - name: cilium
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
